Change LinkedList to interface List.